--- a/project/pakguru_project/pakguru_app/templates/pakguru_app/index.html
+++ b/project/pakguru_project/pakguru_app/templates/pakguru_app/index.html
@@ -3,11 +3,11 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1>Django</h1>
-    <p class="lead">Django is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <h1>Pak.guru</h1>
+    <p class="lead">Welcome to Pak.guru home page</p>
+    <p><a href="{% url 'about' %}" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div>
-
+<!-- 
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
@@ -28,6 +28,6 @@
         <p>You can easily publish to Microsoft Azure using Visual Studio. Find out how you can host your application using a free trial today.</p>
         <p><a class="btn btn-default" href="http://azure.microsoft.com">Learn more &raquo;</a></p>
     </div>
-</div>
+</div> -->
 
 {% endblock %}
