- factored out app related urls in its own urls.py - enabled dailytv and put a sample page

--- a/project/pakguru_project/pakguru_app/templates/pakguru_app/layout.html
+++ b/project/pakguru_project/pakguru_app/templates/pakguru_app/layout.html
@@ -13,8 +13,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body>
-
+<body class="py-4">
+<div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">Pak.guru</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Daily TV</a>
+                      <a class="nav-link" href="{% url 'dailytv' %}" tabindex="-1" aria-disabled="false">Daily TV</a>
                     </li>
 
                     
@@ -54,13 +54,15 @@
 
     <div class="container body-content">
         {% block content %}{% endblock %}
-        <hr/>
-        <footer>
-            <p>&copy; {{ year }} - Pak.guru</p>
-        </footer>
+
     </div>
 
 {% block scripts %}{% endblock %}
+        <hr/>
+        <footer class="footer">
+            <p>&copy; {{ year }} - Pak.guru</p>
+        </footer>
 
+</div>
 </body>
 </html>
