restrict to today date

--- a/project/pakguru_project/frontend_app/templates/pakguru_app/dailytv.html
+++ b/project/pakguru_project/frontend_app/templates/pakguru_app/dailytv.html
@@ -5,7 +5,7 @@
 <div class="jumbotron">
 
 <div class="container">
-        <h2>Total Posts: {{ posts|length }}</h2>
+        <h2>Date: {{ today }} - Total Posts: {{ posts|length }}</h2>
 
     <div class="row mb-1 mr-md-2 bg-primary text-white">
         <div class="col-1 themed-grid-col">Post Id</div>
