--- a/project/pakguru_project/frontend_app/templates/pakguru_app/layout.html
+++ b/project/pakguru_project/frontend_app/templates/pakguru_app/layout.html
@@ -28,7 +28,7 @@
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link" href="{% url 'dailytv' %}" tabindex="-1" aria-disabled="false">Daily TV</a>
+                      <a class="nav-link" href="{% url 'dailytv' %}" tabindex="1">Daily TV</a>
                     </li>
 
                     
