separated dailytv into drama serials and talk shows features

--- a/project/pakguru_project/frontend_app/templates/pakguru_app/index.html
+++ b/project/pakguru_project/frontend_app/templates/pakguru_app/index.html
@@ -5,7 +5,8 @@
 <div class="jumbotron">
     <h1>Pak.guru</h1>
     <p class="lead">Welcome to Pak.guru home page</p>
-    <p><a href="{% url 'dailytv' %}" class="btn btn-primary btn-large">Watch Daily TV &raquo;</a></p>
+    <p><a href="{% url 'talkshows' %}" class="btn btn-primary btn-large">Watch Daily Talk Shows &raquo;</a></p>
+    <p><a href="{% url 'dramaserials' %}" class="btn btn-primary btn-large">Watch Drams Serials &raquo;</a></p>
 </div>
 
 {% endblock %}
