--- a/project/pakguru_project/frontend_app/templates/pakguru_app/layout.html
+++ b/project/pakguru_project/frontend_app/templates/pakguru_app/layout.html
@@ -23,14 +23,17 @@
               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item {{ home_page }}">
                       <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                     </li>
 
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'dailytv' %}" tabindex="1">Daily TV</a>
+                    <li class="nav-item {{ talkshows_page }}">
+                      <a class="nav-link" href="{% url 'talkshows' %}" tabindex="1">Talk Shows</a>
                     </li>
 
+                    <li class="nav-item {{ dramaserials_page }}">
+                      <a class="nav-link" href="{% url 'dramaserials' %}" tabindex="2">Drama Serials</a>
+                    </li>
                     
                     <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
