--- a/project/pakguru_project/frontend_app/templates/pakguru_app/dramaserials.html
+++ b/project/pakguru_project/frontend_app/templates/pakguru_app/dramaserials.html
@@ -62,22 +62,37 @@
             {% endif %} 
 
             {{ post.show}} - {{ post.target_date }}</h3>
+
             {% if user.is_superuser or user.is_staff  %}
-            <span><a target='_blank' href="{{ post.change_url }}">
+            <span><a target='_blank' href="{{ post.change_url }}" title="{{ post.change_url }}">
               <img src="{% static 'frontend_app/edit-icon.png' %}" width="17">&nbsp;</a></span>
+
+            <span><a target='_blank' href="{{ post.feed_job_url }}" title="{{ post.feed_job_url }}">
+              <img src="{% static 'frontend_app/job_logo_small.png' %}" width="25">&nbsp;</a></span>
+
+            <span><a target='_blank' href="{{ post.feed_file_url }}" title="{{ post.feed_file_url }}">
+              <img src="{% static 'frontend_app/feed_logo_small.png' %}" width="25">&nbsp;</a></span>
+
+            <span><a target='_blank' href="{{ post.source_detail }}" title="{{ post.source_detail }}">
+              <img src="{% static 'frontend_app/feed_source.jpg' %}" width="25">&nbsp;</a></span>
+
             {% endif %} 
 
-            <span title="{{ post.post_id }}">{{ post.target_date }} - </span>
-            <span>{{ post.label }}</span>
-
-            <br/>
+            <span title="{{ post.label }}"><strong>{{ post.target_date }} - {{ post.label }}</strong></span>
+            </div>
+        </div>
+        <br/>
+        <div class="row justify-content-md-center">
+          <div class="col- themed-grid-col align-self-center" title="{{ post.url }}">
 
             {% if post.type == 'utube' %} 
             <iframe width="560" height="315" src="{{ post.url }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             {% endif %} 
+
             {% if post.type == 'dailymotion' %} 
             <iframe frameborder="0" width="560" height="315" src="{{ post.url }}" allowfullscreen allow="autoplay"></iframe>
             {% endif %} 
+            
             <hr/>
 
           </div>
