--- a/project/pakguru_project/frontend_app/templates/pakguru_app/layout.html
+++ b/project/pakguru_project/frontend_app/templates/pakguru_app/layout.html
@@ -5,6 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143619657-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-143619657-1');
+    </script>
 
     <title>{{ title }} - Pakguru website</title>
     {% load static %}
