--- a/project/pakguru_project/frontend_app/templates/pakguru_app/contact.html
+++ b/project/pakguru_project/frontend_app/templates/pakguru_app/contact.html
@@ -5,16 +5,7 @@
 <h2>{{ title }}.</h2>
 <h3>{{ message }}</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSefJtUrs99ZZniaOKJ8NYLYzpPAikcgMJ5lR3VN5Qv9B2MfWA/viewform?embedded=true" width="640" height="1374" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
 
 {% endblock %}
