--- a/project/pakguru_project/frontend_app/templates/frontend_app/recentshows.html
+++ b/project/pakguru_project/frontend_app/templates/frontend_app/recentshows.html
@@ -36,7 +36,7 @@
                   {{ post.show.name}}</a> 
               </span>
                 <span class="h6 {{post.latest_post_color}}">              
-                    ({{ post.latest_post.target_date |timesince }} ago)
+                    {{ post.latest_post.target_date }} 
               </span>    
             </h4>
           </div>
