--- a/project/pakguru_project/frontend_app/templates/pakguru_app/index.html
+++ b/project/pakguru_project/frontend_app/templates/pakguru_app/index.html
@@ -7,6 +7,7 @@
     <p class="lead">Welcome to Pak.guru home page</p>
     <p><a href="{% url 'recentshows' %}" class="btn btn-primary btn-large">Watch Recently Published Shows &raquo;</a></p>
     <p><a href="{% url 'talkshows' %}" class="btn btn-primary btn-large">Watch Daily Talk Shows &raquo;</a></p>
+    <p><a href="{% url 'comedyshows' %}" class="btn btn-primary btn-large">Watch Comedy Shows &raquo;</a></p>
     <p><a href="{% url 'dramaserials' %}" class="btn btn-primary btn-large">Watch Drams Serials &raquo;</a></p>
 </div>
 
