--- a/project/pakguru_project/frontend_app/templates/frontend_app/show_summary.html
+++ b/project/pakguru_project/frontend_app/templates/frontend_app/show_summary.html
@@ -31,15 +31,34 @@
         <div class="col-1">
         </div>
         <div class="col-11">
+               <div class="row">
+                  <div class="col-">
+                      <span class="{{post.latest_post_color}}"> 
+                      Latest Show Date: {{ post.latest_post.target_date | date:"D d-M-Y"  }}
+                    </span>
+                  </div>
+               </div>
 
-               <span class="h4">
-               <a href="{% url 'singledramaserial' channel=post.channel_slug show=post.show_slug show_id=post.show.show_id %}">
-                  {{ post.show.name}}</a>
-                  </span>
-                  -
-                  <span class="{{post.latest_post_color}}"> 
-                  Latest from: {{ post.latest_post.target_date | date:"D d-M-Y"  }}
-                </span>
+
+               <div class="row">
+                  <div class="col-">
+                <span class="h4">
+                <a href="{% url 'singledramaserial' channel=post.channel_slug show=post.show_slug show_id=post.show.show_id %}">
+                    {{ post.show.name}}</a>
+                    </span>
+                  </div>
+               </div>
+
+               <div class="row">
+                  <div class="col-">
+                      <span class="{{post.latest_post_color}}"> 
+                      <br/>
+                    </span>
+                  </div>
+               </div>
+
+
+
             </div>
         </div>
       {% endifchanged %}
