--- a/project/pakguru_project/frontend_app/templates/frontend_app/show_summary.html
+++ b/project/pakguru_project/frontend_app/templates/frontend_app/show_summary.html
@@ -7,60 +7,67 @@
 <div class="container">
 
   <div class="row bg-primary text-white justify-content-md-center">
-      <div class="col-12">
-        <h3>{{message}} </h3>
-      </div>
+    <div class="col-12">
+      <h3>{{message}} </h3>
+    </div>
   </div>
   <div class="row justify-content-md-center">
-      <div class="col-12">
-         <h4>{{ posts|length }} Video{{ posts|length | pluralize }}</h4>
+    <div class="col-12">
+      <h4>{{ posts|length }} Video{{ posts|length | pluralize }}</h4>
+    </div>
+  </div>
+
+  {% for post in posts  %}
+  {% ifchanged %}
+  <div class="row">
+    <div class="col-12">
+      <hr />
+      <h2>{{ post.show.channel }} </h2>
+    </div>
+  </div>
+  {% endifchanged %}
+  {% ifchanged %}
+  <div class="row">
+    <div class="col-1">
+    </div>
+    <div class="col-11">
+      <div class="row">
+        <div class="col-">
+          <span class="{{post.latest_post_color}} text-sm-center">
+            {{ post.show.host_name | default_if_none:"" }} /
+            Aired on: {{ post.latest_post.target_date | date:"D d-M-Y"  }}
+          </span>
+        </div>
       </div>
- </div>
 
-    {% for post in posts  %} 
-      {% ifchanged %}
-        <div class="row">
-          <div class="col-12">
-          <hr/>
-              <h2>{{ post.show.channel }} </h2>
-          </div>
+
+      <div class="row">
+        <div class="col-">
+          <span class="h4">
+            <a
+              href="{% url 'singledramaserial' channel=post.channel_slug show=post.show_slug show_id=post.show.show_id %}">
+              {{ post.show.name}}</a>
+          </span>
+
+          <span class="h6">
+
+
+          </span>
         </div>
-      {% endifchanged %}
-      {% ifchanged %}
-        <div class="row">
-        <div class="col-1">
+      </div>
+
+      <div class="row">
+        <div class="col-">
+          <span class="{{post.latest_post_color}}">
+            <br />
+          </span>
         </div>
-        <div class="col-11">
-               <div class="row">
-                  <div class="col-">
-                      <span class="{{post.latest_post_color}}"> 
-                      Latest Show Date: {{ post.latest_post.target_date | date:"D d-M-Y"  }}
-                    </span>
-                  </div>
-               </div>
-
-
-               <div class="row">
-                  <div class="col-">
-                <span class="h4">
-                <a href="{% url 'singledramaserial' channel=post.channel_slug show=post.show_slug show_id=post.show.show_id %}">
-                    {{ post.show.name}}</a>
-                    </span>
-                  </div>
-               </div>
-
-               <div class="row">
-                  <div class="col-">
-                      <span class="{{post.latest_post_color}}"> 
-                      <br/>
-                    </span>
-                  </div>
-               </div>
+      </div>
 
 
 
-            </div>
-        </div>
-      {% endifchanged %}
-    {% endfor %}
-{% endblock %}
+    </div>
+  </div>
+  {% endifchanged %}
+  {% endfor %}
+  {% endblock %}
