--- a/project/pakguru_project/frontend_app/templates/frontend_app/video_list_partial.html
+++ b/project/pakguru_project/frontend_app/templates/frontend_app/video_list_partial.html
@@ -1,57 +1,64 @@
-
 {% block video_list %}
 {% load staticfiles %}
 
 {% for post in posts %}
 
-    <div class="row justify-content-md-center">
-        <div class="col- themed-grid-col align-self-center" title="{{ post.url }}">
+<div class="row justify-content-md-center">
+    <div class="col- themed-grid-col align-self-center" title="{{ post.url }}">
         <h6>
-                {% if post.type == 'utube' %} 
-                    <img src="{% static 'frontend_app/yt_logo_rgb_light-small.png' %}" width="26">
-                {% endif %} 
-                {% if post.type == 'dailymotion' %} 
-                    <img src="{% static 'frontend_app/dm_logo_rgb_light-small.png' %}" width="26">
-                {% endif %} 
+            {% if post.type == 'utube' %}
+            <img src="{% static 'frontend_app/yt_logo_rgb_light-small.png' %}" width="26">
+            {% endif %}
+            {% if post.type == 'dailymotion' %}
+            <img src="{% static 'frontend_app/dm_logo_rgb_light-small.png' %}" width="26">
+            {% endif %}
 
-                <strong> <span class="h4">{{ post.label }}</span></strong>
+            <strong>
+                <span class="h5">
+                    <a target='_blank' href="{{ post.detail_url  }}" title="Watch - {{ post.label }}">
+                        {{ post.label }} </a>
+                </span>
+
+            </strong>
         </h6>
-            {% if user.is_superuser or user.is_staff  %}
-                <span><a target='_blank' href="{{ post.change_url }}" title="{{ post.change_url }}">
-                    <img src="{% static 'frontend_app/edit-icon.png' %}" width="17">&nbsp;</a></span>
+        {% if user.is_superuser or user.is_staff  %}
+        <span><a target='_blank' href="{{ post.change_url }}" title="{{ post.change_url }}">
+                <img src="{% static 'frontend_app/edit-icon.png' %}" width="17">&nbsp;</a></span>
 
-                <span><a target='_blank' href="{{ post.feed_job_url }}" title="{{ post.feed_job_url }}">
-                    <img src="{% static 'frontend_app/job_logo_small.png' %}" width="25">&nbsp;</a></span>
+        <span><a target='_blank' href="{{ post.feed_job_url }}" title="{{ post.feed_job_url }}">
+                <img src="{% static 'frontend_app/job_logo_small.png' %}" width="25">&nbsp;</a></span>
 
-                <span><a target='_blank' href="{{ post.feed_file_url }}" title="{{ post.feed_file_url }}">
-                    <img src="{% static 'frontend_app/feed_logo_small.png' %}" width="25">&nbsp;</a></span>
+        <span><a target='_blank' href="{{ post.feed_file_url }}" title="{{ post.feed_file_url }}">
+                <img src="{% static 'frontend_app/feed_logo_small.png' %}" width="25">&nbsp;</a></span>
 
-                <span><a target='_blank' href="{{ post.source_detail }}" title="{{ post.source_detail }}">
-                    <img src="{% static 'frontend_app/feed_source.jpg' %}" width="25">&nbsp;</a></span>
+        <span><a target='_blank' href="{{ post.source_detail }}" title="{{ post.source_detail }}">
+                <img src="{% static 'frontend_app/feed_source.jpg' %}" width="25">&nbsp;</a></span>
 
-            {% endif %} 
-            
-            <span class="text-info" title="{{ post.label }}">
-            Aired on: {{ post.target_date | date:"d-M-Y"  }} - 
-            Published on: {{ post.publish_date | date:"d-M-Y" }} 
-            </span>
-        </div>
+        {% endif %}
+
+        <span class="text-info" title="{{ post.label }}">
+            Host: {{ post.show.host_name | default_if_none:"" }} /
+            Aired on: {{ post.target_date | date:"D d-M-Y"  }} /
+            Published on: {{ post.publish_date | date:"d-M-Y" }}
+        </span>
     </div>
+</div>
 
-    <br/>
-    <div class="row justify-content-md-center">
-        <div class="col- themed-grid-col align-self-center" title="{{ post.url }}">
-        {% if post.type == 'utube' %} 
-        <iframe width="560" height="315" src="{{ post.url }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        {% endif %} 
-        {% if post.type == 'dailymotion' %} 
+<br />
+<div class="row justify-content-md-center">
+    <div class="col- themed-grid-col align-self-center" title="{{ post.url }}">
+        {% if post.type == 'utube' %}
+        <iframe width="560" height="315" src="{{ post.url }}" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        {% endif %}
+        {% if post.type == 'dailymotion' %}
         <iframe frameborder="0" width="560" height="315" src="{{ post.url }}" allowfullscreen allow="autoplay"></iframe>
-        {% endif %} 
-        <hr/>
-
-        </div>
+        {% endif %}
+        <hr />
 
     </div>
+
+</div>
 
 
 {% endfor %}
@@ -60,12 +67,14 @@
 <script type="text/javascript">
     function load_iframes() {
         var vidDefer = document.getElementsByTagName('iframe');
-        for (var i=0; i<vidDefer.length; i++) {
-            if(vidDefer[i].getAttribute('data-src')) {
-            vidDefer[i].setAttribute('src',vidDefer[i].getAttribute('data-src'));
-            } } }
-            document.addEventListener("DOMContentLoaded", function(event) {
-                load_iframes();
+        for (var i = 0; i < vidDefer.length; i++) {
+            if (vidDefer[i].getAttribute('data-src')) {
+                vidDefer[i].setAttribute('src', vidDefer[i].getAttribute('data-src'));
+            }
+        }
+    }
+    document.addEventListener("DOMContentLoaded", function (event) {
+        load_iframes();
     });
 </script>
 
